--- a/tou.html
+++ b/tou.html
@@ -1,20 +1,28 @@
+
 <!doctype html>
 
 <head>
-<title>Cult Collection &mdash; Terms of Use</title>
-<script type="text/javascript" src="//use.typekit.net/rkx7uem.js"></script>
+<title>Cult Collection &mdash; The Place to Discover Your Style</title>
+<link rel="icon" 
+      type="image/png" 
+      href="images/cult_app_icon_16.png" />
+<script type="text/javascript" src="http://use.typekit.net/rkx7uem.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-<base href="http://www.startcult.com/">
+<!-- base href="http://www.startcult.com/" -->
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body class="light_back">
 	<div class="header">
-		<img id="header_line" alt="" src="images/960x1_headerLine_light_.png">
-		<a href="index.html">
-			<img id="identity" alt="Cult Collection" src="images/100x100_identity_.png">
-		</a>
+		<div class="header_line">
+			<img id="header_line" alt="" src="images/960x1_headerLine_light.png">
+			<a href="index.html">
+				<img id="identity" alt="Cult Collection" src="images/100x100_identity.png">
+			</a>
+		</div>
 	</div>
+	
 	<div class="generic_text_container">
 		<br>
 		<p class="orange">
@@ -131,6 +139,7 @@
 			
 		</div>
 	</div>
+	
 	<div id="footer_area_floating">
 		<br><br>
 		<div class="body_copy">
@@ -148,27 +157,27 @@
 				<tr>
 					<td class="screenshot_cell">
 						<a href="mailto:info@startcult.com">
-							<img class="social_image" alt="" src="images/40x40_social_white_email_.png">
+							<img class="social_image" alt="" src="images/40x40_social_white_email.png">
 						</a>
 					</td>
 					<td class="screenshot_cell">
 						<a href="http://www.twitter.com/Cult_Collection" target="_blank">
-							<img class="social_image" alt="" src="images/40x40_social_white_twitter_.png">
+							<img class="social_image" alt="" src="images/40x40_social_white_twitter.png">
 						</a>
 					</td>
 					<td class="screenshot_cell">
 						<a href="http://www.facebook.com/CultCollection" target="_blank">
-							<img class="social_image" alt="" src="images/40x40_social_white_facebook_.png">
+							<img class="social_image" alt="" src="images/40x40_social_white_facebook.png">
 						</a>
 					</td>
 					<td class="screenshot_cell">
 						<a href="http://www.pinterest.com/CultCollection" target="_blank">
-							<img class="social_image" alt="" src="images/40x40_social_white_pinterest_.png">
+							<img class="social_image" alt="" src="images/40x40_social_white_pinterest.png">
 						</a>
 					</td>
 					<td class="screenshot_cell">
 						<a href="http://www.instagram.com/Cult_Collection/" target="_blank">
-							<img class="social_image" alt="" src="images/40x40_social_white_instagram_.png">
+							<img class="social_image" alt="" src="images/40x40_social_white_instagram.png">
 						</a>
 					</td>
 				</tr>
@@ -176,19 +185,49 @@
 		</div>
 		<br><br>
 		<div class="body_copy">
-			<p class="dark_gray">
-				<a class="white" href="mailto:support@startcult.com">SUPPORT</a>
-				&nbsp;&nbsp;|&nbsp;&nbsp;
-				<a class="white" href="privacy.html">PRIVACY POLICY</a>
-				&nbsp;&nbsp;|&nbsp;&nbsp;
-				<a class="white" href="attribution.html">ATTRIBUTION</a>
-				<br><br>
-			</p>
+			<ul class="dark_gray wrap-list">
+				<li>
+					<a class="white" href="mailto:support@startcult.com">SUPPORT</a>
+					&nbsp;&nbsp;|&nbsp;&nbsp;
+				</li>
+				<li>
+					<a class="white" href="privacy.html">PRIVACY POLICY</a>
+					&nbsp;&nbsp;|&nbsp;&nbsp;
+				</li>
+				<li>
+					<a class="white" href="attribution.html">ATTRIBUTION</a>
+				</li>
+			</ul>
+			<br><br>
 			<p class="light_gray">
 				&#0169; 2014&ndash;2015, 541 Ramona Inc.
 			</p>
 			<br><br><br><br>
 		</div>
+
+        <script>
+
+            (function (i, s, o, g, r, a, m) {
+
+                i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+
+                    (i[r].q = i[r].q || []).push(arguments)
+
+                }, i[r].l = 1 * new Date(); a = s.createElement(o),
+
+  m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+
+            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+
+
+            ga('create', 'UA-57588512-1', 'auto');
+
+            ga('send', 'pageview');
+
+
+
+</script>
 
 </body>
 </html>
