--- a/privacy.html
+++ b/privacy.html
@@ -1,24 +1,26 @@
+
 <!doctype html>
 
 <head>
-<title>Cult Collection &mdash; Privacy Policy</title>
+<title>Cult Collection &mdash; The Place to Discover Your Style</title>
 <link rel="icon" 
-
       type="image/png" 
-
       href="images/cult_app_icon_16.png" />
 <script type="text/javascript" src="http://use.typekit.net/rkx7uem.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-<base href="http://www.startcult.com/">
+<!-- base href="http://www.startcult.com/" -->
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body class="light_back">
 	<div class="header">
-		<img id="header_line" alt="" src="images/960x1_headerLine_light_.png">
-		<a href="index.html">
-			<img id="identity" alt="Cult Collection" src="images/100x100_identity_.png">
-		</a>
+		<div class="header_line">
+			<img id="header_line" alt="" src="images/960x1_headerLine_light.png">
+			<a href="index.html">
+				<img id="identity" alt="Cult Collection" src="images/100x100_identity.png">
+			</a>
+		</div>
 	</div>
 	<div class="generic_text_container">
 		<br>
@@ -126,13 +128,13 @@
                     o Log Data.&nbsp; When you visit the app, whether as a Cult Collection Subscriber or a
                     non-registered user just browsing (any of these, a &quot;Cult Collection User&quot;), our servers
                     automatically record information that your browser sends whenever you visit a website
-                    (&quot;Log Data&quot;).&nbsp; This Log Data may include information such as your computer’s
+                    (&quot;Log Data&quot;).&nbsp; This Log Data may include information such as your computerâ€™s
                     Internet Protocol (&quot;IP&quot;) address, browser type or the webpage you were visiting
                     before you came to our app, pages of our app that you visit, the time spent on
                     those pages, information you search for on our app, access times and dates, and
                     other statistics.&nbsp; We use this information to monitor and analyze use of the
-                    app and the Service and for the app’s technical administration, to increase our
-                    app’s functionality and user-friendliness, and to better tailor it to our visitors’
+                    app and the Service and for the appâ€™s technical administration, to increase our
+                    appâ€™s functionality and user-friendliness, and to better tailor it to our visitorsâ€™
                     needs.&nbsp; For example, some of this information is collected so that when you
                     visit the app again, it will recognize you and serve advertisements and other information
                     appropriate to your interests.&nbsp; We also use this information to verify that
@@ -148,7 +150,7 @@
                 
                 <p style="margin: 0px;">
                     Like many websites, we use &quot;cookies&quot; to collect information.&nbsp; A cookie is a
-                    small data file that we transfer to your computer’s hard disk for record-keeping
+                    small data file that we transfer to your computerâ€™s hard disk for record-keeping
                     purposes.&nbsp; We use cookies for two purposes.&nbsp; First, we utilize persistent
                     cookies to save your registration ID for future logins to the app.&nbsp; Second,
                     we utilize persistent ID cookies to enable certain features of the app, to better
@@ -196,7 +198,7 @@
                     is a top priority.&nbsp; We do not and will not, at any time, request your credit
                     card information, your account ID, login password, or national identification numbers
                     in a non-secure or unsolicited e-mail or telephone communication.&nbsp; For more
-                    information about phishing, visit the Federal Trade Commission’s website.</p>
+                    information about phishing, visit the Federal Trade Commissionâ€™s website.</p>
                 <p style="margin: 0px;">
                     &nbsp;</p>
                 <p style="margin: 0px;">
@@ -229,7 +231,7 @@
                     <strong>Service Providers</strong>.&nbsp; We may employ third party companies and
                     individuals to facilitate our Service, to provide the Service on our behalf, to
                     perform app-related services (e.g., without limitation, maintenance services, database
-                    management, fulfillment, web analytics and improvement of the app’s features) or
+                    management, fulfillment, web analytics and improvement of the appâ€™s features) or
                     to assist us in analyzing how our app and Service are used.&nbsp; These third parties
                     have access to your Personal Information only to perform these tasks on our behalf
                     and are obligated not to disclose or use it for any other purpose. [We may also
@@ -293,7 +295,7 @@
                 <p style="margin: 0px;">
                     Our app contains links to other websites.&nbsp; If you choose to visit an advertiser 
                     by &quot;clicking on&quot; a banner ad or other type of advertisement, or click on another 
-                    third party link, you will be directed to that third party’s website.&nbsp; The fact 
+                    third party link, you will be directed to that third partyâ€™s website.&nbsp; The fact 
                     that we link to a website or present a banner ad or other type of advertisement 
                     is not an endorsement, authorization or representation of our affiliation with 
                     that third party, nor is it an endorsement of their privacy or information 
@@ -351,27 +353,27 @@
 				<tr>
 					<td class="screenshot_cell">
 						<a href="mailto:info@startcult.com">
-							<img class="social_image" alt="" src="images/40x40_social_white_email_.png">
+							<img class="social_image" alt="" src="images/40x40_social_white_email.png">
 						</a>
 					</td>
 					<td class="screenshot_cell">
 						<a href="http://www.twitter.com/Cult_Collection" target="_blank">
-							<img class="social_image" alt="" src="images/40x40_social_white_twitter_.png">
+							<img class="social_image" alt="" src="images/40x40_social_white_twitter.png">
 						</a>
 					</td>
 					<td class="screenshot_cell">
 						<a href="http://www.facebook.com/CultCollection" target="_blank">
-							<img class="social_image" alt="" src="images/40x40_social_white_facebook_.png">
+							<img class="social_image" alt="" src="images/40x40_social_white_facebook.png">
 						</a>
 					</td>
 					<td class="screenshot_cell">
 						<a href="http://www.pinterest.com/CultCollection" target="_blank">
-							<img class="social_image" alt="" src="images/40x40_social_white_pinterest_.png">
+							<img class="social_image" alt="" src="images/40x40_social_white_pinterest.png">
 						</a>
 					</td>
 					<td class="screenshot_cell">
 						<a href="http://www.instagram.com/Cult_Collection/" target="_blank">
-							<img class="social_image" alt="" src="images/40x40_social_white_instagram_.png">
+							<img class="social_image" alt="" src="images/40x40_social_white_instagram.png">
 						</a>
 					</td>
 				</tr>
@@ -379,19 +381,49 @@
 		</div>
 		<br><br>
 		<div class="body_copy">
-			<p class="dark_gray">
-				<a class="white" href="mailto:support@startcult.com">SUPPORT</a>
-				&nbsp;&nbsp;|&nbsp;&nbsp;
-				<a class="white" href="privacy.html">PRIVACY POLICY</a>
-				&nbsp;&nbsp;|&nbsp;&nbsp;
-				<a class="white" href="attribution.html">ATTRIBUTION</a>
-				<br><br>
-			</p>
+			<ul class="dark_gray wrap-list">
+				<li>
+					<a class="white" href="mailto:support@startcult.com">SUPPORT</a>
+					&nbsp;&nbsp;|&nbsp;&nbsp;
+				</li>
+				<li>
+					<a class="white" href="privacy.html">PRIVACY POLICY</a>
+					&nbsp;&nbsp;|&nbsp;&nbsp;
+				</li>
+				<li>
+					<a class="white" href="attribution.html">ATTRIBUTION</a>
+				</li>
+			</ul>
+			<br><br>
 			<p class="light_gray">
 				&#0169; 2014&ndash;2015, 541 Ramona Inc.
 			</p>
 			<br><br><br><br>
 		</div>
+
+        <script>
+
+            (function (i, s, o, g, r, a, m) {
+
+                i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+
+                    (i[r].q = i[r].q || []).push(arguments)
+
+                }, i[r].l = 1 * new Date(); a = s.createElement(o),
+
+  m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+
+            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+
+
+            ga('create', 'UA-57588512-1', 'auto');
+
+            ga('send', 'pageview');
+
+
+
+</script>
 
 </body>
 </html>
